# claude-widget

./: .gitignore  Cargo.toml  README.md
crates/widget-app/: Cargo.toml
crates/widget-app/src/: app.rs  config.rs  debug_log.rs  emitter.rs  installer.rs  main.rs  registry.rs  server.rs  sticky.rs  transcript.rs  usage_api.rs
crates/widget-core/: Cargo.toml
crates/widget-core/src/: lib.rs  usage.rs  visuals.rs
tracker/: README.md  map.md
tracker/assets/: oauth-usage.sample.json  research-digest-2026-07-10.md  spike2-findings.md  spike2-hook-events.sample.jsonl  spike3-findings.md  spike3-statusline-input.sample.json  spike3-usage-snapshot.sample.json
tracker/tickets/: 01-spike-which-signals-fire.md  02-spike-team-seat-rate-limits.md  03-choose-widget-stack.md  04-prototype-card-mascot-effort-wave.md  05-decide-usage-cost-source.md  06-spec-state-machine-aggregation.md  07-build-daemon-hooks-installer.md  08-build-widget-card-animations.md  09-build-usage-gauge-cost.md  10-notifications-tray-autostart-acceptance.md
