[package]
name = "widget-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure state machine for the Claude Code status widget: hook events -> session/aggregate state."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
